[package]
name = "compy"
version = "0.1.0"
edition = "2021"
description = "converts python programs to one-liners"
readme = "README.md"
repository = "https://github.com/mlhoutel/compy"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.2.6"
rustpython-parser = "0.1.2"

[dev-dependencies]
rustpython-parser = "0.1.2"
rustpython-vm = "0.3.0"
malachite-bigint = { version = "=0.1.0" }
malachite-q = "=0.3.2"
malachite-base = "=0.3.2"
